spec: add pagination support
